fix(ui): correct theme toggle icon visibility

--- a/theme.scss
+++ b/theme.scss
@@ -32,6 +32,15 @@ body {
 .navbar-nav .nav-link {
   color: #333333 !important;
 }
-.navbar-nav .nav-link:hover {
+.navbar-nav .nav-link:hover,
+.navbar-nav .nav-link:focus {
   color: #8a3b3b !important;
+}
+
+#theme-toggle.fa-solid.fa-sun {
+  color: #333333 !important;
+}
+
+.dark #theme-toggle.fa-solid.fa-moon {
+  color: #fdfbf6 !important;
 }
